--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-databaseHost=localhost
-databaseUser=root
+databaseHost=us-cdbr-east-03.cleardb.com
+databaseUser=bdf160acc27534
 databasePort=3306
-databasePassword=pizza_delivery
-databaseName=pizza_delivery
+databasePassword=bd30d9b0ee8f36c
+databaseName=heroku_43be65cc5021369
+ 
