--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
+.env
 
-# Conventional directory for build outputs
-build/
-mysql_data
+
 
 # Directory created by dartdoc
 doc/api/
